# tosa-analyzer

./: .gitignore  CMakeLists.txt  README.md  sample.tosa
.cache/clangd/index/: tensorGraph.cpp.13B85F5FF3787C79.idx  tensorLiveness.cpp.52E616FA279791A6.idx  tosaParser.cpp.5E32800501ED0B83.idx
include/: MemoryPlanner.h  TensorGraph.h  TensorNode.h  TosaAnalyzer.h
include/optimizer/: ConvolutionAnalyzer.h  MemoryAllocationPlan.h  OperationOptimizerInterface.h  OptimizationMetrics.h  TensorLifetimeInfo.h
include/optimizer/registry/: OptimizerRegistry.h
lib/: LivenessAnalysis.cpp  TensorNode.cpp
lib/optimizer/strategies/: BaseMemoryOptimizer.cpp  GreedyFirstFit.cpp  HeavyLightDecomposition.cpp  PeakMinimizingPlanner.cpp
src/: LivenessAnalysis.h  LivenessAnlysis.cpp  LivenessAnlysis.h  MemoryPlanner.cpp  MemoryPlanner.h  TensorGraph.cpp  TensorGraph.h  TensorNode.cpp  TensorNode.h  TosaAnalyzer.cpp  TosaAnalyzer.h
src/optimizer/: BaseMemoryOptimizer.cpp  ConvolutionAnalyzer.cpp  GreedyFirstFit.cpp  HeavyLightDecomposition.cpp  MemoryAllocationPlan.h  MemoryOptimizerInterface.h
src/optimizer/adapters/: LivenessAnalysisAdapter.cpp  LivenessAnalysisAdapter.h
src/optimizer/registry/: OptimizerRegistry.cpp
src/optimizer/strategies/: ConvolutionOptimizer.cpp
